# ur5-model

./: CMakeLists.txt  README.md
matlab/: FK.mat  MCGs.mat  T.mat  UR5.m  UR5.mat  UR5simplify.m  makeFK.m  simzeros.m  ur5draw.m  ur5fk.m  ur5odefun.m  ur5solve.m
src/: CMakeLists.txt  resources.qrc  ur5model.cpp  ur5model.hpp  ur5model.json  ur5model.ui
workcell/: Scene.dwc.xml  Scene.wc.xml  SceneCollisionSetup.xml
workcell/UR5/: UR.dwc.xml  UR.wc.xml
workcell/UR5/geometry/: czlon1_ghost.ac  czlon2_ghost.ac  czlon3_ghost.ac  czlon4_ghost.ac  czlon5_ghost.ac  joint0_ghost.ac  joint1_ghost.ac  joint2_ghost.ac  joint3_ghost.ac  joint4_ghost.ac  joint5_ghost.ac  narzedzie_ghost.ac
workcell/geometry/: blat.ac  gripper.stl  sponge.ac  stelaz.stl
